--- a/views/productos.html
+++ b/views/productos.html
@@ -22,7 +22,7 @@
                             <a class="nav-link" href="#">Ubicación</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#section-products">Menú</a>
+                            <a class="nav-link" href="#">Menú</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="../views/nosotros.html">Nosotros</a>
